<resources>
    <string name="app_name">AliveCor Coding Assignment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_information">User Information</string>
    <string name="create_user">Create User</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="select_date_of_birth">Select date of birth</string>
</resources>